# DLXsudoku

./: .appveyor.yml  .travis.yml  Makefile  Makefile.in  README.md  chooser.h  configure  gen_wrapper.cc  rander.h  sudoku.cc  sudoku.h  wrapper.cc
cmake/: CMakeLists.txt
