project(DLXsudoku)
add_executable(sudoku sudoku.cc wrapper.cc)
add_executable(gen sudoku.cc gen_wrapper.cc)
set_property(TARGET sudoku PROPERTY CXX_STANDARD 11)
set_property(TARGET gen PROPERTY CXX_STANDARD 11)
target_compile_features(sudoku PRIVATE cxx_lambdas)
target_compile_features(gen PRIVATE cxx_lambdas)
find_package(Threads)
target_link_libraries(sudoku ${CMAKE_THREAD_LIBS_INIT})
target_link_libraries(gen ${CMAKE_THREAD_LIBS_INIT})
